# rust-url-shortner

./: .env  Cargo.toml  api-docs.md  docker-compose.yml  learning-resources.md  readme.md
src/: lib.rs  main.rs
src/error/: errors.rs  mod.rs
src/handlers/: health.rs  mod.rs  url_handler.rs
src/models/: url.rs
src/services/: url_service.rs
tests/: api_tests.rs
