[package]
name = "url_shortener"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A URL shortener service built with Rust and Axum"

[dependencies]
# Web framework and server
axum = "0.8.1"
axum-server = "0.7.1"
tower-http = { version = "0.5", features = ["trace", "limit"] }

# Database
mongodb = "3.2.1"
bson = "2.8"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# URL handling and encoding
base62 = "2.0"
url = "2.3"

# Utilities
rand = "0.9.0"
futures-util = "0.3"
once_cell = "1.18"
dotenv = "0.15"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tokio-test = "0.4"
mockall = "0.12"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }

[features]
default = []
test-utils = []  # For test utilities and mocks